# FZGPUModules

./: .dockerignore  .gitignore  CHANGELOG  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTE.md  Dockerfile  Doxyfile  LICENSE  README.md  README.txt  annotated.html  annotated_dup.js  api_reference.html  architecture.html  bitpack__stage_8h.html  bitpack__stage_8h.js  bitpack__stage_8h_source.html  bitshuffle__stage_8h.html  bitshuffle__stage_8h.js  bitshuffle__stage_8h_source.html  building_from_source.html  classes.html  classfz_1_1BitpackStage-members.html  classfz_1_1BitpackStage.html  classfz_1_1BitpackStage.js  classfz_1_1BitpackStage__inherit__graph.map  classfz_1_1BitpackStage__inherit__graph.md5  classfz_1_1BitshuffleStage-members.html  classfz_1_1BitshuffleStage.html  classfz_1_1BitshuffleStage.js  classfz_1_1BitshuffleStage__inherit__graph.map  classfz_1_1BitshuffleStage__inherit__graph.md5  classfz_1_1CompressionDAG-members.html  classfz_1_1CompressionDAG.html  classfz_1_1CompressionDAG.js  classfz_1_1DifferenceStage-members.html  classfz_1_1DifferenceStage.html  classfz_1_1DifferenceStage.js  (+512 more)
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build-check.yml  ci.yml  docker-publish.yml  docs.yml
cmake/: FZGPUModulesConfig.cmake.in  FZModulesConfig.cmake.in
cudastf/: cudastf_api.hh  cudastf_demo.cc  huffman_class.hh
cudastf/examples/: cudastf_demo.cc  testing.cc
cudastf/modules/: hist_generic_stf.cu  hist_sparse_stf.cu  huffman_class.hh  huffman_kernels.cu  lorenzo.cu  lorenzo_1d.cu  proto_lorenzo_1d.cu  spvn_stf.cu
cudastf/tools/: compare.hh  ibuffer.hh
docs/: api_reference.md  architecture.md  building.md  cli.md  config_file.md  docker.md  fzm_format.md  how_to_add_a_stage.md  libpressio_python.md  mainpage.md
docs/stages/: bitpack.md  bitshuffle.md  coders.md  diff.md  fused.md  huffman.md  index.md  lorenzo.md  lorenzo_quant.md  negabinary.md  predictors.md  quantizer.md  quantizers.md  rle.md  rze.md  shufflers.md  transforms.md  zigzag.md
examples/: CMakeLists.txt  analyze_lorenzo.cpp  basic_profiling_example.cpp  caller_allocated_output.cpp  compare_lorenzo_modes.cpp  debug_logging.cpp  demo.cc  demo_pipelines.cc  demo_simple.cc  file_io_example.cpp  main.cpp  manual_pipeline.cpp  ownership_example.cpp  pfpl_graph_capture.cpp  pfpl_pipeline.cpp  plot_lorenzo_codes.py  profile_repeat.cpp  simple_api_lorenzo_dual_branch.cpp  target.cpp  test_quant_only.cpp
examples/presets/: cusz.toml  lorenzo_bitpack.toml  pfpl.toml  quantizer_lorenzo_bitpack.toml  speed.toml
include/: cuda_check.h  fzgpumodules.h  fzm_format.h  fzmodules.h  log.h
include/mem/: mempool.h
include/pipeline/: compressor.h  concat_kernel.h  config.h  convenience.h  dag.h  perf.h  stat.h
include/stage/: mock_stages.h  stage.h  stage_factory.h
modules/codec/: codec.hh
modules/codec/zstd/: CMakeLists.txt
modules/coders/bitpack/: bitpack_stage.cu  bitpack_stage.h
modules/coders/huffman/: huffman_stage.cu  huffman_stage.h
modules/coders/rle/: rle.cu
modules/coders/rze/: rze_stage.cu
modules/encoders/RLE/: rle.cu  rle.h
modules/encoders/diff/: diff.cu  diff.h
modules/encoding/bitpacking/: bitpacking.cu  bitpacking.h
modules/encoding/concatenation/: concat.cu  concat.h
modules/encoding/difference/: diff_encode.cu  diff_encode.h
modules/encoding/outlier/: outlier.cu  outlier.h
modules/encoding/run_length_encoding/: RLE.cu  RLE.h
modules/fused/lorenzo_quant/: lorenzo_quant.cu  lorenzo_quant.h  lorenzo_quant_kernels.cuh  lorenzo_quant_nd.cu
modules/predictors/: predictor_utils.cuh
profiling/: CMakeLists.txt
scripts/: compute_sanitizers.txt  data_testing.py  download-sdrb-data.sh  new_stage.sh  run_sanitizers.sh  scaling_up.py
scripts/benchmarking/: run_compressor.sh  sdrb_benchmarking.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  (+97 more)
src/mem/: memory_pool.cpp  memory_pool.h  mempool.cpp  mempool.h
src/pipeline/: compressor.cpp  compressor.h  compressor_exec.cpp  compressor_inverse_dag.cpp  compressor_io.cpp  concat_kernel.cu  config.cpp  dag.cpp  dag.h  dag_coloring.cpp  dag_query.cpp  perf.cpp  pipeline_utils.h  stat.cpp
src/stage/: mock_stages.cu  stage.cpp  stage.h
tests/: CMakeLists.txt  test_bitshuffle_stage.cpp  test_buffer_coloring.cpp  test_cli.cpp  test_data_patterns.cpp  test_difference.cpp  test_file_io.cpp  test_graph_capture.cpp  test_liveness.cpp  test_lorenzo.cpp  test_memory_strategies.cpp  test_negabinary_stage.cpp  test_ownership.cpp  test_pipeline.cpp  test_pipeline_errors.cpp  test_quantizer.cpp  test_rle.cpp  test_rze_stage.cpp  test_zigzag_stage.cpp
tests/golden/: README.md  regenerate.cpp
tests/helpers/: fz_test_utils.h  stage_harness.h  test_stages.cu  test_stages.h
tests/pipeline/: CMakeLists.txt  test_buffer_coloring.cpp  test_config.cpp  test_data_patterns.cpp  test_file_io.cpp  test_golden.cpp  test_graph_capture.cpp  test_liveness.cpp  test_memory_strategies.cpp  test_mempool_fallback.cpp  test_ownership.cpp  test_pipeline.cpp  test_pipeline_errors.cpp  test_profiling.cpp
tests/stages/: CMakeLists.txt  test_bitpack.cpp  test_bitshuffle_stage.cpp  test_difference.cpp  test_huffman.cpp  test_lorenzo.cpp  test_negabinary.cpp  test_negabinary_stage.cpp  test_quantizer.cpp  test_rle.cpp  test_rze_stage.cpp  test_type_matrix.cpp  test_zigzag.cpp  test_zigzag_stage.cpp
tools/: config.hh  err.hh  header.hh  metrics.hh  timer.hh
tools/api/: fzmod.hh  fzmod_compressor.hh  fzmod_decompressor.hh
tools/cli/: cli.cc
tools/mem/: buffer.hh  cxx_smart_ptr.h
utils/: main.cpp  outlier_test.cpp  pipeline_example.cpp  target.cpp
utils/cli/: cli.cpp
(+93 files in other folders)
